--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         {
             "name": "Tobi Kivelip",
             "email": "tkivelip@gmail.com",
-            "homepage": "https://www.laramate.de/",
+            "homepage": "https://github.com/tkivelip",
             "role": "Developer"
         }
     ],
@@ -21,8 +21,13 @@
     "prefer-stable": true,
     "require": {
         "php": "^7.2",
-        "laravel/framework": "5.6.*|5.7.*|5.8.*|6.*",
+        "laravel/framework": "5.6.*|5.7.*|5.8.*|6.*|7.*",
         "laramate/composite": "^1.0"
+    },
+    "require-dev": {
+        "mockery/mockery": "^1.0",
+        "phpunit/phpunit": "^8.5",
+        "orchestra/testbench": "^5.0"
     },
     "autoload": {
         "psr-4": {
