--- a/composer.json
+++ b/composer.json
@@ -20,14 +20,13 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^7.2",
-        "laravel/framework": "5.6.*|5.7.*|5.8.*|6.*|7.*",
-        "laramate/composite": "^1.0"
+        "php": "^7.3|^8.0",
+        "laravel/framework": "7.*|8.*",
+        "laramate/composite": "*"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^8.5",
-        "orchestra/testbench": "^5.0"
+        "orchestra/testbench": "^6.0"
     },
     "autoload": {
         "psr-4": {
@@ -45,5 +44,11 @@
                 "Laramate\\Nucid\\Providers\\NucidProvider"
             ]
         }
-    }
+    },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "../Laramate/*"
+        }
+    ]
 }
